--- a/index.html
+++ b/index.html
@@ -2,48 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Python API Page</title>
+    <title>Python DB Manager</title>
     <style>
-        body { font-family: sans-serif; display: flex; justify-content: center; padding-top: 50px; background: #f0f2f5; }
-        .card { background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); width: 100%; max-width: 400px; }
-        button { width: 100%; padding: 10px; background: #007bff; color: white; border: none; border-radius: 6px; cursor: pointer; }
-        #response { margin-top: 20px; padding: 10px; background: #e9ecef; border-radius: 4px; min-height: 40px; word-break: break-all; }
-    </style>
+        body { font-family: sans-serif; max-width: 500px; margin: 40px auto; padding: 20px; }
+        .row { display: flex; justify-content: space-between; padding: 10px; border-bottom: 1px solid #eee; }
+        button { cursor: pointer; }
+        .del-btn { color: red; border: 1px solid red; background: none; border-radius: 4px; }
+        input { width: 70%; padding: 8px; }
+    </script>
 </head>
 <body>
 
-<div class="card">
-    <h2>Cloudflare Worker API</h2>
-    <p>Send a message to my Python API:</p>
-    <input type="text" id="user-input" placeholder="Type something..." style="width:94%; padding:10px; margin-bottom:10px;">
-    <button onclick="callApi()">Send to Python</button>
+    <h2>Message Database</h2>
     
-    <div id="response">Waiting for click...</div>
-</div>
+    <div style="margin-bottom: 20px;">
+        <input type="text" id="msgInput" placeholder="Enter message...">
+        <button onclick="addRow()">Add Row</button>
+    </div>
 
-<script>
-    async function callApi() {
-        const display = document.getElementById('response');
-        const input = document.getElementById('user-input').value;
-        const url = "https://my-python-cloudflare-api.markku-lab.workers.dev"; // <--- UPDATE THIS
+    <div id="messageList">Loading messages...</div>
 
-        display.innerText = "Calling Python...";
+    <script>
+        const API_URL = "https://my-python-cloudflare-api.markku-lab.workers.dev";
 
-        try {
-            const res = await fetch(url, {
+        // 1. READ rows
+        async function loadRows() {
+            const res = await fetch(API_URL);
+            const data = await res.json();
+            const container = document.getElementById('messageList');
+            container.innerHTML = data.map(row => `
+                <div class="row">
+                    <span>${row.content}</span>
+                    <button class="del-btn" onclick="deleteRow(${row.id})">Delete</button>
+                </div>
+            `).join('');
+        }
+
+        // 2. CREATE row
+        async function addRow() {
+            const input = document.getElementById('msgInput');
+            await fetch(API_URL, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ test: input || "No input provided" })
+                body: JSON.stringify({ message: input.value })
             });
-
-            const data = await res.json();
-            display.innerText = "Response: " + (data.message || JSON.stringify(data));
-        } catch (err) {
-            display.innerText = "Error: " + err.message;
-            console.error(err);
+            input.value = '';
+            loadRows(); // Refresh list
         }
-    }
-</script>
 
+        // 3. DELETE row
+        async function deleteRow(id) {
+            await fetch(API_URL, {
+                method: 'DELETE',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ id: id })
+            });
+            loadRows(); // Refresh list
+        }
+
+        // Initial Load
+        loadRows();
+    </script>
 </body>
 </html>
