--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,5 +28,7 @@
 </div>
 
 <script src="script.js"></script>
+<!-- 100% privacy-first analytics -->
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
